--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^22.19.1",
     "@vitejs/plugin-react": "^5.0.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
