--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "ts-node --esm server/index.ts"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.8",
     "@google/genai": "^1.31.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -24,9 +25,13 @@
     "@types/express": "^5.0.6",
     "@types/node": "^22.19.1",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
