--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@fontsource/inter": "^5.2.8",
     "@google/genai": "^1.31.0",
+    "@types/node-fetch": "^2.6.13",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "lucide-react": "^0.555.0",
     "mammoth": "1.6.0",
+    "node-fetch": "^2.7.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1"
   },
