--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "ts-node --esm server/index.ts"
+    "start": "tsx server/index.ts"
   },
   "dependencies": {
     "@fontsource/inter": "^5.2.8",
